--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gis",
-  "version": "1.0.225",
+  "name": "merit-money",
+  "version": "0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js",   
+    "start": "node app.js",
     "test-coverage": "nyc --reporter=lcov --reporter=text-summary mocha tests/**/* --recursive",
     "test-coverage-html": "nyc --reporter=html mocha tests/**/* --recursive",
     "lint": "gulp eslint",
@@ -27,43 +27,37 @@
     "async": "2.6.2",
     "async-q": "0.3.1",
     "awilix": "7.0.1",
-    "aws-sdk": "^2.1033.0",
     "bluebird": "3.5.3",
     "body-parser": "1.18.3",
     "bunyan": "1.8.12",
-    "bwip-js": "^3.0.4",
-    "date-easter": "^0.2.5",
     "date-holidays": "^1.5.1",
     "exceljs": "^4.2.0",
-    "express": "4.16.4",
+    "express": "4.17.3",
     "fs-extra": "7.0.1",
     "http-shutdown": "1.2.0",
     "immutable": "3.8.2",
     "install": "0.12.2",
     "jsonwebtoken": "8.5.0",
     "lodash": "^4.17.21",
-    "method-override": "3.0.0",
     "minify-xml": "^2.5.0",
     "mkdirp": "^1.0.3",
-    "moment": "2.24.0",
-    "moment-timezone": "^0.5.26",
-    "mysql2": "1.6.5",
-    "natives": "1.1.6",
-    "pg": "^8.2.1",
-    "pg-hstore": "^2.3.3",
+    "moment": "2.29.1",
+    "moment-timezone": "^0.5.34",
+    "mysql2": "2.3.3",
+    "natives": "1.1.6",   
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
     "q": "1.5.1",
     "re2": "^1.17.4",
     "request-promise": "4.2.4",
     "sequelize": "5.21.3",
     "sequelize-cli": "^5.5.1",
-    "soap": "^0.43.0",
-    "tempfile": "^3.0.0",
     "underscore.string": "3.3.5"
   },
   "devDependencies": {
     "del": "4.0.0",
-    "jshint": "2.10.2",
+    "jshint": "2.13.4",
     "jshint-stylish": "2.2.1",
     "mocha": "^8.3.2",
     "nyc": "14.0.0",
