--- a/docs/errors.yml
+++ b/docs/errors.yml
@@ -14,7 +14,7 @@ properties:
             example: "validation_error"
           code:
             type: integer
-            example: 3100001
+            example: 1
           message:
             type: string
             example: "supplied parameters are not valid"
