--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
     "ajv": "^6.12.6",
     "async": "^2.6.4",
     "async-q": "0.3.1",
-    "awilix": "7.0.1",   
+    "awilix": "7.0.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "1.18.3",
     "bunyan": "1.8.12",
-    "date-holidays": "^1.5.1",    
+    "date-holidays": "^1.5.1",
     "express": "4.17.3",
     "fs-extra": "7.0.1",
     "http-shutdown": "1.2.0",
     "immutable": "3.8.2",
     "install": "0.12.2",
     "jsonwebtoken": "8.5.0",
-    "lodash": "^4.17.21",    
+    "lodash": "^4.17.21",
     "mkdirp": "^1.0.3",
     "moment": "^2.29.3",
     "moment-timezone": "^0.5.34",
@@ -47,7 +48,7 @@
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
     "q": "1.5.1",
-    "re2": "^1.17.4",  
+    "re2": "^1.17.4",
     "sequelize": "^5.22.5",
     "sequelize-cli": "^5.5.1",
     "underscore.string": "3.3.5"
