--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "merit-money",
-  "version": "0.1",
+  "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "node app.js",
     "start_nodemon": "nodemon app.js",
@@ -54,11 +57,11 @@
     "underscore.string": "3.3.5"
   },
   "devDependencies": {
+    "eslint": "^8.12.0",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^3.10.1",
     "del": "4.0.0",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.12.0",
+    "dotenv": "^16.0.0",    
     "eslint-config-google": "^0.14.0",
     "jshint": "2.13.4",
     "jshint-stylish": "2.2.1",
