--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "body-parser": "1.18.3",
     "bunyan": "1.8.12",
     "cors": "^2.8.5",
+    "cron": "^2.1.0",
     "date-holidays": "^1.5.1",
     "express": "4.17.3",
     "fs-extra": "7.0.1",
